Rewrite the device mirroring code

This patch does effectively three things:

1) Implements new mirroring algorithm, which
    + doesn't have rounding bugs of the previous one
    + works 4-5 times faster that the previous one
    + is the same for Horizontal and Vertical mirroring

2) Ports mirroring to the Strokes Framework (implements
   new KisMirrorProcessingVisitor)

3) Fixes exact bounds cache reset in KisPaintDevice

BUG:322792